--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "publisher": "stenlyandika",
   "description": "Simple dark theme for VS Code based on Stenly Andika's color palette.",
   "version": "0.0.1",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/StenlyAndika/vscode-overdrive-color-theme.git"
+  },
   "engines": {
     "vscode": "^1.101.0"
   },
