--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "displayName": "Overdrive Theme",
   "publisher": "StenlyAndika",
   "description": "Simple dark theme for VS Code.",
-  "version": "0.0.2",
+  "version": "0.0.3",
+  "icon": "icon.png",
   "license": "MIT",
   "repository": {
     "type": "git",
